Developed User Management screen

--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
@@ -40,3 +40,10 @@
         </section>
     </div>
 </div>
+
+<ng-template #enableOrDisablePolicyRef>
+    <div class="dialog-body">
+       <span class="dialog-body-header">{{action}} Policy</span>
+       <span class="dialog-body-content">Are you really sure you want to {{action.toLowerCase()}} "{{selectedRowTitle}}"?</span>
+    </div>
+</ng-template>
