--- a/webapp/src/app/shared/components/molecules/dialog-box/dialog-box.component.html
+++ b/webapp/src/app/shared/components/molecules/dialog-box/dialog-box.component.html
@@ -1,14 +1,15 @@
 <div class="dialog-box">
-  <div mat-dialog-title class="title">
-    <app-text classNames="headline-6 high-emphasis" [text]="data.title"></app-text>
+  <div mat-dialog-title [class.hide]="data.title == null">
+    <app-text classNames="body-2 high-emphasis" [text]="data.title"></app-text>
+      <img src="../assets/icons/x-icon.svg" (click)=onNoClick()>
   </div>
   <div mat-dialog-content class="content">
-    <app-text classNames="body-2 low-emphasis" [text]="data.message"></app-text>
+  <ng-container [ngTemplateOutlet]="data.template"></ng-container>
   </div>
-  <div mat-dialog-actions class="flex gap-8">
-    <app-custom-button *ngIf="data.noButtonLabel" style="margin-left: auto" buttonType="stroked"
-      [label]="data.noButtonLabel" (click)="onNoClick()"></app-custom-button>
+  <div mat-dialog-actions>
     <app-custom-button *ngIf="data.yesButtonLabel" buttonType="flat" [label]="data.yesButtonLabel"
-      (click)="onYesClick()" [mat-dialog-close]="" cdkFocusInitial></app-custom-button>
+    (click)="onYesClick()" [mat-dialog-close]="" cdkFocusInitial></app-custom-button>
+    <app-custom-button *ngIf="data.noButtonLabel" buttonType="stroked"
+      [label]="data.noButtonLabel" (click)="onNoClick()"></app-custom-button>
   </div>
 </div>
