--- a/webapp/src/app/shared/dropdown/dropdown.component.css
+++ b/webapp/src/app/shared/dropdown/dropdown.component.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   gap: 12px;
+  padding-top: 6px;
   justify-content: center;
   align-items: center;  
 }
@@ -25,8 +26,6 @@
   padding: 0px !important;
 }
 
-
-
 ::ng-deep .mat-form-field-label-wrapper{
   width: calc(100% - 30px) !important;
 }
@@ -40,14 +39,26 @@ width: 14px !important;
 }
 
 ::ng-deep .mat-form-field-type-mat-select .mat-form-field-label{
-  padding: 3px 12px;
+  padding: 8px 12px;
 }
 
 ::ng-deep .mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label{
-   display: none !important;
+  width: auto !important;
+  padding: 2px 8px !important;
+  margin-left: 4px !important;
+  font: var(--text-body-1);
+  color: var(--text-low-emphasis);
+  background-color: white;
+  display: block !important;
 }
 
 .dropdown-wrapper ::ng-deep .mat-select{
+  color: var(--text-high-emphasis);
+  font: var(--text-body-2);
+  padding: 0px 12px;
+}
+
+.dropdown-wrapper ::ng-deep .mat-select-value{
   color: var(--text-high-emphasis);
   font: var(--text-body-2);
   padding: 0px 12px;
