--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.css
@@ -95,3 +95,19 @@
     background-color: var(--primary-500);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.32);
 }
+
+.dialog-body-header{
+    font: var(--text-headline-6);
+    color: var(--text-high-emphasis);
+}
+
+.dialog-body-content{
+   font: var(--text-body-2);
+   color: var(--text-medium-emphasis);
+}
+
+.dialog-body{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
