--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.css
@@ -192,3 +192,28 @@ gap: 20px;
 .policy-knowledgebase-wrapper ::ng-deep .mat-form-field-label-wrapper{
   top: -13px !important;
 }
+
+.dialog-body-header{
+    font: var(--text-headline-6);
+    color: var(--text-high-emphasis);
+}
+
+.dialog-body-content{
+   font: var(--text-body-2);
+   color: var(--text-medium-emphasis);
+}
+
+.dialog-body{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+
+.policy-knowledgebase-wrapper ::ng-deep .mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label{
+  display: none !important;
+}
+
+.policy-knowledgebase-wrapper ::ng-deep .mat-select-value{
+  color: white !important;
+  padding: 0 4px !important;
+}
