--- a/webapp/src/app/shared/components/atoms/chip/chip.component.css
+++ b/webapp/src/app/shared/components/atoms/chip/chip.component.css
@@ -19,3 +19,35 @@
     background: var(--border-100);
     color: #548BE7;
 }
+
+::ng-deep .mat-chip-list-wrapper{
+    flex-wrap: nowrap !important;
+}
+
+::ng-deep .mat-standard-chip{
+    border-radius: 4px !important;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 4px 10px;
+    gap: 6px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
+::ng-deep .mat-chip{
+    border-radius: 4px;
+    font: var(--text-body-2);
+    width: fit-content;
+    padding: 4px 10px;
+}
+
+::ng-deep .mat-chip-remove.mat-icon{
+    display: flex;
+}
+
+.hideDiv{
+    display: none;
+}
