--- a/webapp/src/app/pacman-features/secondary-components/multiline-chart/multiline-chart.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/multiline-chart/multiline-chart.component.html
@@ -15,6 +15,6 @@
  <div #widgetContainer class='multiline-brush-zoom-container'>   
    
     <div class="multiline-graph-container">    
-        <svg [hidden]='!dataLoaded || error' id={{idUnique}}></svg>
+        <svg [attr.hidden]='!dataLoaded || error' id={{idUnique}}></svg>
     </div> 
 </div>
