--- a/webapp/src/app/pacman-features/modules/admin/job-execution-manager/create-job-execution-manager/create-job-execution-manager.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/job-execution-manager/create-job-execution-manager/create-job-execution-manager.component.html
@@ -70,7 +70,7 @@
                                     <div class="formctnleft">
                                         <div class="createrule" action="#">
                                             <div class="input-box">
-                                                <label>Job Name 123 *
+                                                <label>Job Name *
                                                     <span *ngIf="isJobNameValid==0" class="not-available">(Not
                                                         Available)</span>
                                                     <span *ngIf="isJobNameValid==1" class="available">(Available)</span>
