--- a/webapp/src/app/pacman-features/secondary-components/multiline-brush-zoom/multiline-brush-zoom.component.css
+++ b/webapp/src/app/pacman-features/secondary-components/multiline-brush-zoom/multiline-brush-zoom.component.css
@@ -55,3 +55,9 @@
 .hover {
   transition: 0.2s ease;
 }
+
+.x-axis-text{
+  font: var(--text-caption);
+  display: flex;
+  justify-content: center;
+}
