--- a/webapp/src/app/pacman-features/secondary-components/multiline-brush-zoom/multiline-brush-zoom.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/multiline-brush-zoom/multiline-brush-zoom.component.html
@@ -13,11 +13,12 @@
  -->
 
  <div #graphContainer class="multiline-graph-container">
-    <svg></svg>
     <ul *ngIf="showLegend" class="flex flex-row flex-center flex-wrap">
         <li *ngFor="let line of graphData; let i = index;" class="flex flex-align-center">
             <div class="legend-color" [ngStyle]="{'background-color': lineColorsObject[line.key.split('-')[0]] || lineColorsObject[lineColorsArray[i]] }"></div>
             <div class="flex flex-col flex-center legend-text capitalize">{{line.key.split("-")[0]}}</div>
         </li>
     </ul>
+    <svg></svg>
+    <div class="x-axis-text">Timeline</div>
 </div>
