feat: AutoFix migration from rule to policies
moved all policy specific autofix configuration to policy table.
Policy engine will take policy specific properties from DB using
compliance services API.
Added new environment variable in PoicyEngine POLICY_DETAILS_URL

--- a/jobs/pacman-rule-engine-2.0/src/main/resources/template/autofix-user-notification-info.html
+++ b/jobs/pacman-rule-engine-2.0/src/main/resources/template/autofix-user-notification-info.html
@@ -27,7 +27,7 @@
 									<p class="x_MsoNormal"
 										style="margin-bottom: 0in; margin-bottom: .0001pt; line-height: normal">
 										<span style="font-size: 12.0pt">
-											PaladinCloud detected ${RULE_VIOLATION_MESSAGE}. It is a violation of
+											PaladinCloud detected ${POLICY_VIOLATION_MESSAGE}. It is a violation of
 											<a href="${POLICY_URL}">Paladin Cloud Security Policy</a>
 											please fix this immediately. If there is a valid reason for this please
 											request an exception from the Cloud Security Operations team
@@ -41,7 +41,7 @@
 										${AUTOFIX_WARNING_MESSAGE}
 									</div>
 									<div style="padding-top: 10px;">
-										<img src="http://10.65.228.4:90/countdown-clock/gif.php?time=${TIME}">
+									<!--	<img src="http://10.65.228.4:90/countdown-clock/gif.php?time=${TIME}"> -->
 									</div>
 									</p>
 									<p class="x_MsoNormal"
