--- a/webapp/src/app/shared/table/table.component.html
+++ b/webapp/src/app/shared/table/table.component.html
@@ -29,7 +29,7 @@
                     </div>
 
                     <input type="search" matInput [(ngModel)]="searchQuery" (keyup)="handleSearch($event)"
-                        placeholder="Search" />
+                        placeholder="Search" class="search-bar-cursor" />
                     <!-- <div class="search-in-columns" matSuffix>
                         <mat-form-field>
                             <mat-select [formControl]="searchInColumns" multiple>
@@ -168,7 +168,7 @@
                             <span>No Data</span>
                         </div>
                     </ng-template>
-                    
+
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="whiteListColumns; sticky: true"></tr>
