feat: added client side filters in dashboard list, policy knowledgebase and admin policies, fixed bugs

--- a/webapp/src/app/shared/filter-dropdown/filter-dropdown.component.css
+++ b/webapp/src/app/shared/filter-dropdown/filter-dropdown.component.css
@@ -39,7 +39,7 @@ border-radius: 8px 8px 0px 0px;
 
 .header-text{
 position: relative;
-font-family: 'Mark Pro';
+font-family: 'mark-pro-medium';
 font-style: normal;
 font-weight: 500;
 font-size: 17px;
