--- a/webapp/src/app/shared/filtered-selector/filtered-selector.component.css
+++ b/webapp/src/app/shared/filtered-selector/filtered-selector.component.css
@@ -23,7 +23,7 @@
 }
 
 .text-content{
-    font-family: 'Mark Pro';
+    font-family: 'mark-pro-medium';
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
