--- a/webapp/src/app/pacman-features/modules/admin/user-management/user-management.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/user-management/user-management.component.html
@@ -12,7 +12,7 @@
                     <div class="relative">
                         <app-table style="height: 100%; width: 100%;" [data]="tableData" [columnWidths]="columnWidths"
                             [headerColName]="headerColName" [direction]="direction"
-                            (selectedAction)="onSelectAction($event)" [doLocalSearch]="true"
+                            (actionSelected)="onSelectAction($event)" [doLocalSearch]="true"
                             [whiteListColumns]="whiteListColumns" (searchCalledEventEmitter)="callNewSearch($event)"
                             [searchQuery]="searchTxt" [showSearchBar]="true" [showMoreMenu]="true"
                             [showDownloadBtn]="false" [showFilterBtn]="false"
