--- a/webapp/src/app/shared/table/table.component.css
+++ b/webapp/src/app/shared/table/table.component.css
@@ -142,7 +142,7 @@
 }
 
 .filter-modal-container .filters-wrapper .filter{
-  gap: 8px;
+  gap: 16px;
   align-items: center;
 }
 
@@ -180,7 +180,8 @@
 .filters-container{
   overflow-y: scroll;
   min-height: 50px;
-  max-height: 120px;
+  max-height: 121px;
+  padding: 12px 0px;
 }
 
 .filters-container ::ng-deep .mat-form-field-infix{
@@ -258,11 +259,11 @@
     color: var(--text-high-emphasis) !important;
 }
 
-.more-wrapper ::ng-deep .mat-option{
+::ng-deep .mat-option{
     flex-direction: row-reverse !important;
 }
 
-.more-wrapper ::ng-deep .mat-option:first-child .mat-pseudo-checkbox{
+::ng-deep .mat-option:first-child .mat-pseudo-checkbox{
     display: none;
 }
 
