Fixes: previous change from Issue ID to Violation ID made in wrong location. This fixes that and changes it in the correct location.

--- a/webapp/src/app/pacman-features/modules/compliance/policy-violations-list/policy-violations-list.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-violations-list/policy-violations-list.component.html
@@ -28,7 +28,7 @@
                         [totalRows]='totalRows'
                         (previousPageCalled)='prevPg()' 
                         (nextPageCalled)='nextPg()'
-                        [identifier] = "'ViolationId'"
+                        [identifier] = "'IssueId'"
                         (searchRowTxt) = 'searchEntered($event)'
                         (searchTriggerred) = 'searchTrigger()'
                         (rowClickText)='handlePopClick($event)'
