fix: policy-violation.desc.html
Changed Creation date to Date Created and added a time stamp

--- a/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.html
@@ -68,7 +68,7 @@
     </div>
     <div class="policy-violation-label flex flex-col" *ngIf="violationData.violationCreatedDate">
         <div class="policy-violation-label-header capitalize">
-            Creation date
+            Date Created 2/28/2023
         </div>
         <div class="policy-violation-label-content" title="{{violationData.violationCreatedDate}}">
             {{violationData.violationCreatedDate}}
